--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Values for this workshop - EDIT THIS SECTION.
 #--------------------------------------------------------------------------------
 workshop_repo   : "https://github.com/cwmohr/2016-07-01-training"
-workshop_site   : "https://cwmohr.github.io/2016-07-01-training"
+workshop_site   : "http://cwmohr.github.io/2016-07-01-training"
 #--------------------------------------------------------------------------------
 # Standard Software Carpentry settings - should not need to be modified.
 #--------------------------------------------------------------------------------
